<resources>
    <string-array name="EducationLevel">
        <item>Elementary</item>
        <item>Middle School</item>
        <item>High School</item>
        <item>College</item>
    </string-array>

    <string-array name="TimeSpinner">
        <item>01:00</item>
        <item>01:15</item>
        <item>01:30</item>
        <item>01:45</item>
        <item>02:00</item>
        <item>02:15</item>
        <item>02:30</item>
        <item>02:45</item>
        <item>03:00</item>
        <item>03:15</item>
        <item>03:30</item>
        <item>03:45</item>
        <item>04:00</item>
        <item>04:15</item>
        <item>04:30</item>
        <item>04:45</item>
        <item>05:00</item>
        <item>05:15</item>
        <item>05:30</item>
        <item>05:45</item>
        <item>06:00</item>
        <item>06:15</item>
        <item>06:30</item>
        <item>06:45</item>
        <item>07:00</item>
        <item>07:15</item>
        <item>07:30</item>
        <item>07:45</item>
        <item>08:00</item>
        <item>08:15</item>
        <item>08:30</item>
        <item>08:45</item>
        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>
        <item>21:00</item>
        <item>21:15</item>
        <item>21:30</item>
        <item>21:45</item>
        <item>22:00</item>
        <item>22:15</item>
        <item>22:30</item>
        <item>22:45</item>
        <item>23:00</item>
        <item>23:15</item>
        <item>23:30</item>
        <item>23:45</item>
        <item>24:00</item>
    </string-array>

    <string name="app_name">TeachMeApp</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">incorrect Email or password</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_password">"Enter Password"</string>
    <string name="enter_email">"Enter Email"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="teacher">"Teacher"</string>
    <string name="student">"Student"</string>
    <string name="remember_me">"Remember Me"</string>
    <string name="next">"next"</string>
    <string name="enter_phone">"Enter Phone"</string>
    <string name="enter_name">"Enter Name"</string>
    <string name="fnameerr">Type your name</string>
    <string name="lnameerr">type your last name</string>
    <string name="dateerr">type correct Date</string>
    <string name="emailerr">invalid email</string>
    <string name="phoneerr">invalid phone number</string>
    <string name="addresserr">type Your Address</string>
    <string name="passerr">incorrect, minimum 6 characters</string>
    <string name="cnfpasserr">password does not match</string>
    <string name="enter_surname">"Enter Surname"</string>
    <string name="enter_phoneNumber">"Phone Number"</string>
    <string name="passwords_dont_match">"Your password and confirm password don't match, please check your password and try again"</string>
    <string name="invalid_email">"please enter a valid email"</string>
    <string name="title_activity_maps">Map</string>
    <string name="favorites">Favorites</string>
    <string name="chat">Chat</string>
    <string name="last_classes">Last classes</string>
    <string name="schedule">Schedule</string>
    <string name="recommendation">Recommendation</string>
    <string name="search">Search</string>
    <string name="home_page">Homepage</string>
    <string name="recent_lessons">Recent Lessons</string>
    <string name="search_for_teacher">Search For Teacher</string>
    <string name="google_maps_key">AIzaSyCjUwttdnub0i8vxJwOQAneNmLgHOnCL6g</string>
    <string name="title_activity_maps_get_location">Choose your location please</string>
    <string name="google_place_api_key">AIzaSyCx8KKk_OHGhFXomk3izCBCYmWM0jMPqoM</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="write_a_message">Write a Message</string>

    <string name="give_rate"><u>Give a rate</u></string>

</resources>