<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/signUp_imageView_logo"

        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teach_me_logo" />

    <EditText
        android:id="@+id/signUp_editText_enterName"
        android:layout_width="301dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/enter_name"
        android:hint="@string/enter_name"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_imageView_logo" />

    <Button
        android:id="@+id/signUp_button_generalInfo"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginBottom="120dp"
        android:background="@drawable/buttonshapecool"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signUp_editText_enterPhone"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:ems="10"
        android:inputType="phone"
        android:autofillHints="@string/enter_phone"
        android:hint="@string/enter_phone"
        app:layout_constraintEnd_toEndOf="@+id/signUp_editText_enterSurname"
        app:layout_constraintStart_toStartOf="@+id/signUp_editText_enterSurname"
        app:layout_constraintTop_toBottomOf="@+id/signUp_editText_enterSurname" />

    <EditText
        android:id="@+id/signUp_editText_enterSurname"
        android:layout_width="299dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="@string/enter_surname"
        android:hint="@string/enter_surname"
        app:layout_constraintEnd_toEndOf="@+id/signUp_editText_enterName"
        app:layout_constraintStart_toStartOf="@+id/signUp_editText_enterName"
        app:layout_constraintTop_toBottomOf="@+id/signUp_editText_enterName" />

    <ImageView
        android:id="@+id/generalInfo_profile_pic"
        android:layout_width="84dp"
        android:layout_height="71dp"
        android:clickable="true"
        android:contentDescription="profile picture"
        app:layout_constraintBottom_toTopOf="@+id/signUp_button_generalInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_editText_enterPhone"
        app:layout_constraintVertical_bias="0.139"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>
