<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".HomePageTeacher">


    <FrameLayout
        android:id="@+id/frameLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <include layout="@layout/activity_hamburger_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/home_page"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:fontFamily="@font/montserrat_medium" />
    </FrameLayout>


    <ImageButton
        android:id="@+id/homepage_teacher_button_conversation"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttonshapecool"
        android:contentDescription="@string/chat"
        android:cropToPadding="true"
        android:onClick="onClick_conversationButton"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_chat"
        app:layout_constraintBottom_toTopOf="@+id/homepage_teacher_button_requests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout9" />


    <ImageButton
        android:id="@+id/homepage_teacher_button_history"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttonshapecool"
        android:contentDescription="@string/last_classes"
        android:cropToPadding="true"
        android:onClick="onClick_historyButton"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_customer_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_teacher_button_schedule" />

    <ImageButton
        android:id="@+id/homepage_teacher_button_schedule"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttonshapecool"
        android:contentDescription="@string/schedule"
        android:cropToPadding="true"
        android:onClick="onClick_scheduleButton"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_timetable"
        app:layout_constraintBottom_toTopOf="@+id/homepage_teacher_button_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space3" />

    <ImageButton
        android:id="@+id/homepage_teacher_button_requests"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttonshapecool"
        android:contentDescription="@string/search"
        android:cropToPadding="true"
        android:onClick="onClick_searchButton"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add_2"
        app:layout_constraintBottom_toTopOf="@+id/space3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_teacher_button_conversation" />

    <Space
        android:id="@+id/space3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout9" />

</androidx.constraintlayout.widget.ConstraintLayout>